--- a/feladat.html
+++ b/feladat.html
@@ -509,3 +509,249 @@ Denmark_FlatSquare kihagyva (100%), <br />
 USA_HotelEvo kihagyva (100%), <br />
 USA_Emoji, not updated, 0.0<br />
 USA_ElectricJHawk, <b>updated</b>, 476, <a href="https://www.munzee.com/map/9zqy9rtfs/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ElectricJHawk.json" target="_blank">json</a><br />
+USA_DesMoinesGreetingCards, not updated, -11.960000000000008<br />
+USA_KCNightLights1 kihagyva (100%), <br />
+USA_KCNightLights2 kihagyva (100%), <br />
+USA_KCNightLights3 kihagyva (100%), <br />
+USA_KCNightLights4 kihagyva (100%), <br />
+USA_KCNightLights5 kihagyva (100%), <br />
+USA_KansasCityPanda, not updated, 0.0<br />
+USA_ResearchHospital kihagyva (100%), <br />
+USA_KCAmericanFlag kihagyva (100%), <br />
+USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
+USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
+USA_Marion kihagyva (100%), <br />
+USA_Dragonfly, not updated, 0.0<br />
+USA_ElectricalEvolution, not updated, 0.27999999999999403<br />
+USA_CFPumpkin, not updated, 0.0<br />
+USA_Marion4LeafClover kihagyva (100%), <br />
+USA_Popcorn, not updated, 0.0<br />
+USA_UnofficialCREvo, not updated, 0.0<br />
+USA_CRElectricMystery kihagyva (100%), <br />
+USA_CRHolidayPizza kihagyva (100%), <br />
+USA_CRRose kihagyva (100%), <br />
+USA_CRHonorCross kihagyva (100%), <br />
+USA_WatertownShammy kihagyva (100%), <br />
+USA_CatapultPit kihagyva (100%), <br />
+USA_Crossbow, not updated, 0.0<br />
+USA_BowlingBash kihagyva (100%), <br />
+USA_AtlanticDuck, not updated, 0.0<br />
+USA_80sCube kihagyva (100%), <br />
+USA_CRSubmarine kihagyva (100%), <br />
+USA_IowaVeteransCemetery, not updated, 0.0<br />
+USA_SchildbergsDuckWalk kihagyva (100%), <br />
+USA_CRVegetable kihagyva (100%), <br />
+USA_CedarRapidsBarnyard kihagyva (100%), <br />
+UnitedKingdom_JanuaryGarden2022 kihagyva (100%), <br />
+USA_CRFarmersField kihagyva (100%), <br />
+USA_CRMuscleCar kihagyva (100%), <br />
+USA_JacobLLoosePark kihagyva (100%), <br />
+USA_CRSafari kihagyva (100%), <br />
+USA_CRApril kihagyva (100%), <br />
+USA_PicassoRob kihagyva (100%), <br />
+USA_CRFlatMattLovesBaseball kihagyva (100%), <br />
+USA_FlatRobBirthday kihagyva (100%), <br />
+USA_WestDesMoinesPacMan, not updated, 0.0<br />
+USA_CRFeather kihagyva (100%), <br />
+USA_BlackCat kihagyva (100%), <br />
+USA_CRJonesParkBirthday7 kihagyva (100%), <br />
+USA_NoelridgeMystery kihagyva (100%), <br />
+USA_WestDesMoinesStrawberry, not updated, 0.0<br />
+USA_WestDesMoinesShark, not updated, 0.0<br />
+USA_AltoonaEvos, not updated, 0.6899999999999977<br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.9099999999999966<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+Denmark_AnimalFarmHilleroed, not updated, 0.0<br />
+Denmark_EvolutionparkInRoskilde, not updated, 1.0<br />
+Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
+Denmark_Drikkehorn kihagyva (100%), <br />
+Denmark_FCMidtjylland, not updated, 0.0<br />
+Denmark_RandersRegnskov, not updated, 0.4000000000000057<br />
+Denmark_RandersSnowy, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+Denmark_SonicRanders, not updated, 0.0<br />
+Denmark_FlatHammel kihagyva (100%), <br />
+Denmark_GrenaaAmethyst kihagyva (100%), <br />
+Denmark_GrenaaBigAmethyst kihagyva (100%), <br />
+Denmark_GrenaaFerry kihagyva (100%), <br />
+Denmark_GrenaaSapphireAndAmethyst kihagyva (100%), <br />
+Denmark_HeartOfValentine kihagyva (100%), <br />
+Denmark_Evolution2019Hammel, not updated, 0.0<br />
+Denmark_NextStopTilst kihagyva (100%), <br />
+Denmark_SilkeborgMario kihagyva (100%), <br />
+Denmark_TranbjergButterfly kihagyva (100%), <br />
+Denmark_TrueForestFish kihagyva (100%), <br />
+Denmark_TrueForestSurprise kihagyva (100%), <br />
+Denmark_AppleInAarhus kihagyva (100%), <br />
+Denmark_GardenOfJewels kihagyva (100%), <br />
+Denmark_OnyxCitrineParkInHammel kihagyva (100%), <br />
+Denmark_SilkeborgCoatOfArms kihagyva (100%), <br />
+Denmark_SilkeborgRainbowUnicorn kihagyva (100%), <br />
+Denmark_SilkeborgHexagon kihagyva (100%), <br />
+Denmark_SilkeborgOwl kihagyva (100%), <br />
+Denmark_SilkeborgNightOwl kihagyva (100%), <br />
+Denmark_GrenaaHeart2022 kihagyva (100%), <br />
+UnitedKingdom_PegasusLure, not updated, 0.0<br />
+USA_ValentineHeartCapeCanaveral kihagyva (100%), <br />
+UnitedKingdom_RIPQueenElizabethIICrown kihagyva (100%), <br />
+UnitedKingdom_ChallockChimp, not updated, 0.0<br />
+UnitedKingdom_LittleBurtonApple, not updated, 0.5<br />
+UnitedKingdom_AshfordKentClanWars, not updated, 0.6024096385542208<br />
+UnitedKingdom_AshfordVariety kihagyva (100%), <br />
+UnitedKingdom_ShoeburyVirtuals, not updated, 0.0<br />
+UnitedKingdom_SCGVirtualField, not updated, 0.0<br />
+UnitedKingdom_KentQueensCrown kihagyva (100%), <br />
+UnitedKingdom_EvoPlusGarden kihagyva (100%), <br />
+UnitedKingdom_Nipper kihagyva (100%), <br />
+UnitedKingdom_HayesRainbow kihagyva (100%), <br />
+UnitedKingdom_UnionJack kihagyva (100%), <br />
+UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
+UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
+UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
+UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
+UnitedKingdom_RainbowHeart kihagyva (100%), <br />
+UnitedKingdom_CanterburyVictoriaPark kihagyva (100%), <br />
+UnitedKingdom_MrKnowItOwl, not updated, 0.0<br />
+UnitedKingdom_ChristmasGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_InMemoryOfPam kihagyva (100%), <br />
+UnitedKingdom_LittleLotties1st, not updated, 0.0<br />
+UnitedKingdom_SuperpeggysVirtual, not updated, 0.0<br />
+UnitedKingdom_HelpForHingham, not updated, 0.0<br />
+UnitedKingdom_NotRudolph, not updated, 0.0<br />
+UnitedKingdom_MadHatter, not updated, 0.0<br />
+UnitedKingdom_NVG kihagyva (100%), <br />
+UnitedKingdom_EveryColour kihagyva (100%), <br />
+UnitedKingdom_NaomisSloth kihagyva (100%), <br />
+UnitedKingdom_VirtualJewels, not updated, 0.0<br />
+UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
+UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
+UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
+UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
+UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
+Australia_GattonArrowsArrow1 kihagyva (100%), <br />
+Australia_GattonArrowsArrow2, not updated, 0.0<br />
+Australia_GattonArrowsArrow3, not updated, 0.0<br />
+Australia_GattonArrowsArrow4, not updated, 0.0<br />
+Australia_GattonArrowsArrow5, not updated, 0.0<br />
+Australia_BeeJewelled kihagyva (100%), <br />
+Australia_SoonBeeSpring kihagyva (100%), <br />
+Australia_WeBeePawns kihagyva (100%), <br />
+Australia_BeeFlats kihagyva (100%), <br />
+Australia_BeeQueen kihagyva (100%), <br />
+Australia_BeeTree kihagyva (100%), <br />
+Australia_BeeLucky kihagyva (100%), <br />
+Australia_HereBeeZodiacs kihagyva (100%), <br />
+Australia_FlatterBee kihagyva (100%), <br />
+Australia_Honeycomb kihagyva (100%), <br />
+Australia_TwoBeeOrKnot, not updated, 0.0<br />
+Australia_HoneyDipper kihagyva (100%), <br />
+Australia_LaidleyBees kihagyva (100%), <br />
+Australia_RUMbleBee kihagyva (100%), <br />
+Australia_FlatsFlyAKite kihagyva (100%), <br />
+Australia_SouthernCrossKite kihagyva (100%), <br />
+Australia_ToowoombaRose, not updated, 0.0<br />
+Australia_SnowBeeMelting kihagyva (100%), <br />
+USA_CelticSnake, not updated, 0.0<br />
+Australia_AE2Submarine kihagyva (100%), <br />
+Australia_AussiePossum kihagyva (100%), <br />
+USA_ArizonaCactus kihagyva (100%), <br />
+UnitedKingdom_BournemouthBeachHuts kihagyva (100%), <br />
+Australia_CarsBoysFirstCar kihagyva (100%), <br />
+Australia_CasinoLuckyStar kihagyva (100%), <br />
+UnitedKingdom_CazmosCelebrationGarden kihagyva (100%), <br />
+Australia_CrocOfMunzees kihagyva (100%), <br />
+UnitedKingdom_CuppaCazmo kihagyva (100%), <br />
+Australia_DroughtAngel kihagyva (100%), <br />
+Australia_EmuInCanberra kihagyva (100%), <br />
+UnitedKingdom_FlatFlying kihagyva (100%), <br />
+UnitedKingdom_FlatSledding kihagyva (100%), <br />
+Australia_GoldCoastGhost kihagyva (100%), <br />
+UnitedKingdom_Greenman kihagyva (100%), <br />
+Australia_HauntedHouse kihagyva (100%), <br />
+USA_HorsingAroundAggieland kihagyva (100%), <br />
+USA_Julbock kihagyva (100%), <br />
+USA_ReindeerInKentucky kihagyva (100%), <br />
+Australia_LismorePie kihagyva (100%), <br />
+USA_LostGoldenJellyfish kihagyva (100%), <br />
+UnitedKingdom_LostJellyfishInBournemouth kihagyva (100%), <br />
+USA_LostPBJellyfishInRogers kihagyva (100%), <br />
+UnitedKingdom_LostTurtleInFerndown kihagyva (100%), <br />
+Australia_MawsonLakesDHSTape kihagyva (100%), <br />
+UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
+UnitedKingdom_Pompey kihagyva (100%), <br />
+UnitedKingdom_QueensBaton kihagyva (100%), <br />
+USA_RockingHorseInOhio kihagyva (100%), <br />
+Australia_RooInCanberra kihagyva (100%), <br />
+Australia_SAPartyHat kihagyva (100%), <br />
+Australia_Time2MunzeeLilydale kihagyva (100%), <br />
+Australia_TrojanKitty kihagyva (100%), <br />
+Australia_Tulips kihagyva (100%), <br />
+UnitedKingdom_WinterSolstice kihagyva (100%), <br />
+Australia_MalenyTrees, not updated, 0.0<br />
+USA_MunzeeX kihagyva (100%), <br />
+USA_MunzeesXBirthday kihagyva (100%), <br />
+USA_BobbyTheZombie kihagyva (100%), <br />
+USA_EasterMunzeePin, not updated, 0.0<br />
+Germany_10thBirthdayBerlin, not updated, 0.0<br />
+UnitedKingdom_MiniPortal3 kihagyva (100%), <br />
+USA_MiniPortal4 kihagyva (100%), <br />
+USA_NoblesvilleTaco, not updated, 0.0<br />
+Canada_FabulousFebruaryFeteHeart, not updated, 0.0<br />
+Canada_FabulousFebruaryFeteFlat, not updated, 0.0<br />
+Canada_MadMarchPi kihagyva (100%), <br />
+USA_2ndAnnualCuriosiTeaParty2 kihagyva (100%), <br />
+USA_JunkArt, not updated, 0.0<br />
+USA_FolkstonTomahawk kihagyva (100%), <br />
+Portugal_ShipCanical kihagyva (100%), <br />
+Australia_TourDownUnder, not updated, 0.0<br />
+UnitedKingdom_BathBoat, not updated, 0.0<br />
+USA_GCardinalFlat kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+Finland_city_Kokkola, <b>updated</b>, <a href="https://www.munzee.com/map/ue27q1nvm/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_city_Kokkola.json" target="_blank">json</a><br />
+USA_city_CedarRapids, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb3kzv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_CedarRapids.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.02.12 02:21:34<br />
+összesen 4282<br />
