--- a/feladat.html
+++ b/feladat.html
@@ -1,18 +1,18 @@
-<b>start</b> - 2023.02.12 01:10:12<br />
+<b>start</b> - 2023.02.12 05:23:47<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -34.99000000000001<br />
+Hungary_VotiveChurch, not updated, -35.550000000000004<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
 Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.6000000000000085<br />
-USA_PrattvillePansy, not updated, 0.1600000000000108<br />
+USA_PrattvillePansy, not updated, 0.4900000000000091<br />
 Hungary_MinerSymbol, not updated, 1.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
 USA_MunzeeLogo, not updated, 0.09000000000000341<br />
@@ -20,7 +20,7 @@ NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, 0.37295880149811467<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.17636684303350592<br />
 UnitedKingdom_LFCBebington, not updated, 0.7518796992481178<br />
-Finland_Nurmijarvi, <b>updated</b>, 226, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
@@ -132,7 +132,7 @@ Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
 Denmark_EmeraldInHilleroed kihagyva (100%), <br />
-Finland_HalkokarinEvovene, <b>updated</b>, 1109, <a href="https://www.munzee.com/map/ue27q1nvm/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_HalkokarinEvovene.json" target="_blank">json</a><br />
+Finland_HalkokarinEvovene, not updated, 0.0<br />
 USA_CarettaSeaTurtle kihagyva (100%), <br />
 UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
 Netherlands_LuckyClover kihagyva (100%), <br />
@@ -152,7 +152,7 @@ USA_LakevillesSeaTurtle kihagyva (100%), <br />
 USA_LightningBoltInSapphire kihagyva (100%), <br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
 Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, <b>updated</b>, 856, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
+Finland_TampereElectric, not updated, 0.0<br />
 USA_MontgomeryBaseball kihagyva (100%), <br />
 USA_HanksBoots, not updated, 0.0<br />
 USA_ColorTheZoo, not updated, 0.0<br />
@@ -508,7 +508,7 @@ Denmark_ZeecretHilleroed kihagyva (100%), <br />
 Denmark_FlatSquare kihagyva (100%), <br />
 USA_HotelEvo kihagyva (100%), <br />
 USA_Emoji, not updated, 0.0<br />
-USA_ElectricJHawk, <b>updated</b>, 476, <a href="https://www.munzee.com/map/9zqy9rtfs/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ElectricJHawk.json" target="_blank">json</a><br />
+USA_ElectricJHawk, not updated, 0.0<br />
 USA_DesMoinesGreetingCards, not updated, -11.960000000000008<br />
 USA_KCNightLights1 kihagyva (100%), <br />
 USA_KCNightLights2 kihagyva (100%), <br />
@@ -599,7 +599,7 @@ Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
 Denmark_Drikkehorn kihagyva (100%), <br />
 Denmark_FCMidtjylland, not updated, 0.0<br />
 Denmark_RandersRegnskov, not updated, 0.4000000000000057<br />
-Denmark_RandersSnowy, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+Denmark_RandersSnowy, not updated, 0.0<br />
 Denmark_SonicRanders, not updated, 0.0<br />
 Denmark_FlatHammel kihagyva (100%), <br />
 Denmark_GrenaaAmethyst kihagyva (100%), <br />
@@ -747,11 +747,4 @@ Portugal_ShipCanical kihagyva (100%), <br />
 Australia_TourDownUnder, not updated, 0.0<br />
 UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Finland_city_Kokkola, <b>updated</b>, <a href="https://www.munzee.com/map/ue27q1nvm/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_city_Kokkola.json" target="_blank">json</a><br />
-USA_city_CedarRapids, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb3kzv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_CedarRapids.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.02.12 02:21:34<br />
-összesen 4282<br />
+Canada_WarblersSquare, <b>updated</b>, 111, <a href="https://www.munzee.com/map/dpz8e29qd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_WarblersSquare.json" target="_blank">json</a><br />
