--- a/feladat.html
+++ b/feladat.html
@@ -18,3 +18,7 @@ Hungary_Crossbow, not updated, 0.1700000000000017<br />
 USA_MunzeeLogo, not updated, 0.09000000000000341<br />
 NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, <b>updated</b>, 320, <a href="https://www.munzee.com/map/9vfg0svk5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JewelJack-o-Lantern.json" target="_blank">json</a><br />
+USA_FortWorth2020DumpsterFire, not updated, 0.35273368606702604<br />
+UnitedKingdom_LFCBebington, not updated, 0.7518796992481178<br />
+Finland_Nurmijarvi, not updated, 0.5<br />
+Finland_Hyvinkaa, <b>updated</b>, 486, <a href="https://www.munzee.com/map/udc8vwrpv/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Hyvinkaa.json" target="_blank">json</a><br />
