--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.02.13 01:10:12<br />
+<b>start</b> - 2023.02.13 11:13:47<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -17,8 +17,23 @@ Hungary_MinerSymbol, not updated, 1.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
 USA_MunzeeLogo, not updated, 0.09000000000000341<br />
 NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
-USA_JewelJack-o-Lantern, <b>updated</b>, 320, <a href="https://www.munzee.com/map/9vfg0svk5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JewelJack-o-Lantern.json" target="_blank">json</a><br />
+USA_JewelJack-o-Lantern, not updated, 0.37453183520599964<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.35273368606702604<br />
 UnitedKingdom_LFCBebington, not updated, 0.7518796992481178<br />
 Finland_Nurmijarvi, not updated, 0.5<br />
-Finland_Hyvinkaa, <b>updated</b>, 486, <a href="https://www.munzee.com/map/udc8vwrpv/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Hyvinkaa.json" target="_blank">json</a><br />
+Finland_Hyvinkaa, not updated, 0.0<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.8799999999999955<br />
+Netherlands_TeaAtGrandma kihagyva (100%), <br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 0.0<br />
+Australia_QueensGambit-Horse, not updated, 0.9345794392523388<br />
+USA_CommerceBarnyard kihagyva (100%), <br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, <b>updated</b>, 516, <a href="https://www.munzee.com/map/qd69bvq0m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_YoureAStar.json" target="_blank">json</a><br />
